# archivedigger

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docs/: example-job.yaml  internet-archive-api.md  test-job-ambient.yaml  test-job-shortclips.yaml
docs/ideas/: README.md
docs/plans/: 0001-bootstrap-archivedigger.md  0002-prossimi-passi.md
src/archivedigger/: __init__.py  api.py  cli.py  client.py  config.py  downloader.py  filters.py  formats.py  layout.py  manifest.py  models.py  query.py  resume.py  units.py
src/archivedigger/profiles/: corpus.yaml  dataset.yaml  mirror.yaml
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_downloader.py  test_e2e.py  test_filters.py  test_formats.py  test_integration.py  test_layout.py  test_manifest.py  test_models.py  test_query.py  test_resume.py  test_units.py
